--- a/assets/index.html
+++ b/assets/index.html
@@ -84,6 +84,44 @@
         <button class="about-btn" id="about-btn">Read More</button>
       </div>
     </section>
+
+    <!-- ----------------------
+     service section start here
+    ----------------------------- -->
+
+    <section class="service">
+      <div class="service-wrap ">
+        <div class="single-service">
+          <i class="fab fa-youtube"></i>
+          <h2 class="service-title">Service one</h2>
+          <p>
+          Love means to reach for the sky and with every breath to tear a hundred veils
+          </p>
+        </div>
+
+        <div class="single-service">
+          <i class="fab fa-github"></i>
+          <h2 class="service-title">Service Two</h2>
+          <p>
+            I Love three things, The sun, The moon and you The sun for a day,
+            The moon for a night and you forever
+          </p>
+        </div>
+
+        <div class="single-service">
+          <i class="fab fa-instagram"></i>
+          <h2 class="service-title">Service three</h2>
+          <p>
+        Smile you are the most beautiful girl in the world that i saw today
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ----------------------
+          service section end here
+
+    ----------------------------- -->
     <script src="js/app.js"></script>
   </body>
 </html>
