--- a/assets/index.html
+++ b/assets/index.html
@@ -118,6 +118,8 @@
       </div>
     </section>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem doloremque numquam suscipit quasi impedit incidunt eveniet, facilis ducimus natus eaque autem corrupti officiis assumenda quam dolorum! Dolores voluptatem pariatur dolor!</p>
+
     <!-- ----------------------
           service section end here
 
