eveything is fair and lovely

--- a/assets/index.html
+++ b/assets/index.html
@@ -118,11 +118,10 @@
       </div>
     </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem doloremque numquam suscipit quasi impedit incidunt eveniet, facilis ducimus natus eaque autem corrupti officiis assumenda quam dolorum! Dolores voluptatem pariatur dolor!</p>
+    <p>smile you are the most beautiful girl that i saw today</p>
 
     <!-- ----------------------
-          service section end here
-
+    service section end here
     ----------------------------- -->
     <script src="js/app.js"></script>
   </body>
