if all you want to do is undo the act of committing and also removing from the stagging area

--- a/assets/index.html
+++ b/assets/index.html
@@ -119,6 +119,7 @@
     </section>
 
     <p>smile you are the most beautiful girl that i saw today</p>
+    <p>If all you want to do is undo the act of committing leaving everything else in fact use---</p>
 
     <!-- ----------------------
     service section end here
