git checkout branch

--- a/assets/index.html
+++ b/assets/index.html
@@ -121,6 +121,8 @@
     <p>smile you are the most beautiful girl that i saw today</p>
     <p>If all you want to do is undo the act of committing leaving everything else in fact use---</p>
 
+    <p>And if you actually want to completely undo it  throwing away all uncommitted changes resetting everything to the previous commit as the original question asked git reset --hard reset</p>
+
     <!-- ----------------------
     service section end here
     ----------------------------- -->
