some modifier index.html and style.css

--- a/assets/index.html
+++ b/assets/index.html
@@ -90,12 +90,13 @@
     ----------------------------- -->
 
     <section class="service">
-      <div class="service-wrap ">
+      <div class="service-wrap">
         <div class="single-service">
           <i class="fab fa-youtube"></i>
           <h2 class="service-title">Service one</h2>
           <p>
-          Love means to reach for the sky and with every breath to tear a hundred veils
+            Love means to reach for the sky and with every breath to tear a
+            hundred veils
           </p>
         </div>
 
@@ -112,16 +113,25 @@
           <i class="fab fa-instagram"></i>
           <h2 class="service-title">Service three</h2>
           <p>
-        Smile you are the most beautiful girl in the world that i saw today
+            Smile you are the most beautiful girl in the world that i saw today
           </p>
         </div>
       </div>
     </section>
 
-    <p>smile you are the most beautiful girl that i saw today</p>
-    <p>If all you want to do is undo the act of committing leaving everything else in fact use---</p>
+    <div class="container">
+      <p class="para">smile you are the most beautiful girl that i saw today</p>
+      <p class="para">
+        If all you want to do is undo the act of committing leaving everything
+        else in fact use---
+      </p>
 
-    <p>And if you actually want to completely undo it  throwing away all uncommitted changes resetting everything to the previous commit as the original question asked git reset --hard reset</p>
+      <p class="para">
+        And if you actually want to completely undo it throwing away all
+        uncommitted changes resetting everything to the previous commit as the
+        original question asked git reset --hard reset
+      </p>
+    </div>
 
     <!-- ----------------------
     service section end here
